[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/FashionVictim.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/default.theme" type="Theme" id=3]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.0156863, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 34.0
theme = SubResource( 2 )
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 292.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 279.0
margin_right = 744.0
margin_bottom = 254.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 125.0
margin_bottom = 39.0
text = "Name"
align = 2

[node name="NameText" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 145.0
margin_right = 465.0
margin_bottom = 44.0
rect_min_size = Vector2( 320, 0 )
text = "Player"
align = 1

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 59.0
margin_right = 125.0
margin_bottom = 93.0
text = "IP"
align = 2

[node name="IPText" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 145.0
margin_top = 54.0
margin_right = 465.0
margin_bottom = 98.0
rect_min_size = Vector2( 320, 0 )
text = "127.0.0.1"
align = 1

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 113.0
margin_right = 125.0
margin_bottom = 147.0
text = "Port"
align = 2

[node name="PortText" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 145.0
margin_top = 108.0
margin_right = 465.0
margin_bottom = 152.0
rect_min_size = Vector2( 320, 0 )
text = "5402"
align = 1

[node name="HostButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 162.0
margin_right = 125.0
margin_bottom = 202.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 145.0
margin_top = 162.0
margin_right = 465.0
margin_bottom = 202.0
text = "Join Game"

[node name="TeamLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 216.0
margin_right = 125.0
margin_bottom = 250.0
text = "Team"
align = 2

[node name="TeamCheck" type="CheckButton" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 145.0
margin_top = 212.0
margin_right = 465.0
margin_bottom = 254.0
text = "Cop Mode"
align = 2

[node name="WaitingRoom" parent="." groups=[
"WaitingRoom",
] instance=ExtResource( 2 )]

[node name="Label" parent="WaitingRoom/VBoxContainer" index="0"]
margin_bottom = 34.0

[node name="CenterContainer" parent="WaitingRoom/VBoxContainer" index="1"]
margin_top = 38.0
margin_bottom = 123.0

[node name="ItemList" parent="WaitingRoom/VBoxContainer/CenterContainer" index="0"]
margin_top = 42.0
margin_bottom = 42.0
items = [ "Player 1", null, false, "Player 2", null, false ]
[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/NameText" to="." method="_on_NameText_text_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/GridContainer/TeamCheck" to="." method="_on_TeamCheck_toggled"]
[connection signal="pressed" from="WaitingRoom/VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]

[editable path="WaitingRoom"]
